=== HEAD

* Support UUID primary keys (badosu, jeremyevans) (#6)

* Add Request#env for getting the environment for the request (jeremyevans)

* Handle search results pagination correctly when an id parameter is used (badosu, jeremyevans) (#5)

=== 1.3.0 (2016-02-02)

* Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)

* Make autoforme.js compatible with turbolinks (mrbrdo) (#3)

* Force explicit labeler on show page, so that two columns are used (jeremyevans) (#2)

* Add edit_html and show_html for overriding the html used for a field (jeremyevans) (#1)

* Give the browse/search tables an id (jeremyevans)

=== 1.2.0 (2015-05-21)

* Add support for returning browse and search results in CSV format (jeremyevans)

=== 1.1.0 (2015-03-23)

* Add Framework#register_by_name to allow autoforme to work better when using code reloading in development (jeremyevans)

=== 1.0.3 (2015-01-27)

* Fix homepage in gemspec (jeremyevans)

* Make roda spec work with upcoming Roda 2 release (jeremyevans)

=== 1.0.2 (2014-12-17)

* Fix double escaping of & in inline mtm edit forms, fixing usage with rack 1.6.0 beta (jeremyevans)

* Work with roda when using static_path_info plugin (jeremyevans)

* Make sure the display name for an object always returns a string (jeremyevans)

=== 1.0.1 (2014-08-19)

* Display BigDecimal values in float format on browse/search pages (jeremyevans)

* Work on roda with all template frameworks, not just erb (jeremyevans)

=== 1.0.0 (2014-07-30)

* Assume :sequel model type (jeremyevans)

* Work without indifferent params (jeremyevans)

* Add support for roda web framework (jeremyevans)

=== 0.5.5 (2014-04-10)

* Make Models::Sequel#mtm_update compatible with Sequel 4.10+ (jeremyevans)

* Display boolean column false values in the search/browse tables (jeremyevans)

=== 0.5.4 (2014-01-06)

* Qualify associated foreign key columns when searching, fixing issues when eager_graph is used on the model (jeremyevans)
